@@ -618,7 +618,7 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|sanityCheckAssertDoubles
+name|sanityCheckAssertNumerics
 argument_list|()
 expr_stmt|;
 name|waitForThingsToLevelOut
@@ -1995,74 +1995,7 @@ literal|" => "
 operator|+
 name|message
 decl_stmt|;
-name|assertEquals
-argument_list|(
-literal|"Min"
-operator|+
-name|msg
-argument_list|,
-name|pivotStats
-operator|.
-name|getMin
-argument_list|()
-argument_list|,
-name|actualStats
-operator|.
-name|getMin
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"Max"
-operator|+
-name|msg
-argument_list|,
-name|pivotStats
-operator|.
-name|getMax
-argument_list|()
-argument_list|,
-name|actualStats
-operator|.
-name|getMax
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"Mean"
-operator|+
-name|msg
-argument_list|,
-name|pivotStats
-operator|.
-name|getMean
-argument_list|()
-argument_list|,
-name|actualStats
-operator|.
-name|getMean
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"Sum"
-operator|+
-name|msg
-argument_list|,
-name|pivotStats
-operator|.
-name|getSum
-argument_list|()
-argument_list|,
-name|actualStats
-operator|.
-name|getSum
-argument_list|()
-argument_list|)
-expr_stmt|;
+comment|// no wiggle room, these should always be exactly equals, regardless of field type
 name|assertEquals
 argument_list|(
 literal|"Count"
@@ -2097,7 +2030,77 @@ name|getMissing
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertDoubles
+name|assertEquals
+argument_list|(
+literal|"Min"
+operator|+
+name|msg
+argument_list|,
+name|pivotStats
+operator|.
+name|getMin
+argument_list|()
+argument_list|,
+name|actualStats
+operator|.
+name|getMin
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Max"
+operator|+
+name|msg
+argument_list|,
+name|pivotStats
+operator|.
+name|getMax
+argument_list|()
+argument_list|,
+name|actualStats
+operator|.
+name|getMax
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// precision loss can affect these in some field types depending on shards used
+comment|// and the order that values are accumulated
+name|assertNumerics
+argument_list|(
+literal|"Sum"
+operator|+
+name|msg
+argument_list|,
+name|pivotStats
+operator|.
+name|getSum
+argument_list|()
+argument_list|,
+name|actualStats
+operator|.
+name|getSum
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNumerics
+argument_list|(
+literal|"Mean"
+operator|+
+name|msg
+argument_list|,
+name|pivotStats
+operator|.
+name|getMean
+argument_list|()
+argument_list|,
+name|actualStats
+operator|.
+name|getMean
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNumerics
 argument_list|(
 literal|"Stddev"
 operator|+
@@ -2114,7 +2117,7 @@ name|getStddev
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"SumOfSquares"
 operator|+
@@ -3735,11 +3738,11 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Given two objects, asserts that they are either both null, or both Numbers    * with double values that are equally-ish with a "small" epsilon (relative to the     * scale of the expected value)    *    * @see Number#doubleValue    */
-DECL|method|assertDoubles
+comment|/**    * Given two objects returned as stat values asserts that they are they are either both<code>null</code>     * or all of the following are true:    *<ul>    *<li>They have the exact same class</li>    *<li>They are both Numbers or they are both Dates -- in the later case, their millisecond's     *      since epoch are used for all subsequent comparisons    *</li>    *<li>Either:    *<ul>    *<li>They are Integer or Long objects with the exact same<code>longValue()</code></li>    *<li>They are Float or Double objects and their<code>doubleValue()</code>s    *        are equally-ish with a "small" epsilon (relative to the scale of the expected value)    *</li>    *</ul>    *</li>    *<ul>    *    * @see Date#getTime    * @see Number#doubleValue    * @see Number#longValue    * @see #assertEquals(String,double,double,double)    */
+DECL|method|assertNumerics
 specifier|private
 name|void
-name|assertDoubles
+name|assertNumerics
 parameter_list|(
 name|String
 name|msg
@@ -3771,14 +3774,74 @@ argument_list|,
 name|actual
 argument_list|)
 expr_stmt|;
+return|return;
 block|}
-else|else
+name|assertEquals
+argument_list|(
+name|msg
+operator|+
+literal|" ... values do not have the same type: "
+operator|+
+name|expected
+operator|+
+literal|" vs "
+operator|+
+name|actual
+argument_list|,
+name|expected
+operator|.
+name|getClass
+argument_list|()
+argument_list|,
+name|actual
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|expected
+operator|instanceof
+name|Date
+condition|)
 block|{
+name|expected
+operator|=
+operator|(
+operator|(
+name|Date
+operator|)
+name|expected
+operator|)
+operator|.
+name|getTime
+argument_list|()
+expr_stmt|;
+name|actual
+operator|=
+operator|(
+operator|(
+name|Date
+operator|)
+name|actual
+operator|)
+operator|.
+name|getTime
+argument_list|()
+expr_stmt|;
+name|msg
+operator|=
+name|msg
+operator|+
+literal|" (w/dates converted to ms)"
+expr_stmt|;
+block|}
 name|assertTrue
 argument_list|(
 name|msg
 operator|+
-literal|" ... expected not a double: "
+literal|" ... expected is not a Number: "
 operator|+
 name|expected
 operator|+
@@ -3794,26 +3857,55 @@ operator|instanceof
 name|Number
 argument_list|)
 expr_stmt|;
-name|assertTrue
+if|if
+condition|(
+name|expected
+operator|instanceof
+name|Long
+operator|||
+name|expected
+operator|instanceof
+name|Integer
+condition|)
+block|{
+name|assertEquals
 argument_list|(
 name|msg
-operator|+
-literal|" ... actual not a double: "
-operator|+
-name|actual
-operator|+
-literal|"=>"
-operator|+
-name|actual
+argument_list|,
+operator|(
+operator|(
+name|Number
+operator|)
+name|expected
+operator|)
 operator|.
-name|getClass
+name|longValue
 argument_list|()
 argument_list|,
-name|actual
-operator|instanceof
+operator|(
+operator|(
 name|Number
+operator|)
+name|actual
+operator|)
+operator|.
+name|longValue
+argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|expected
+operator|instanceof
+name|Float
+operator|||
+name|expected
+operator|instanceof
+name|Double
+condition|)
+block|{
 comment|// compute an epsilon relative to the size of the expected value
 name|double
 name|expect
@@ -3857,15 +3949,30 @@ name|epsilon
 argument_list|)
 expr_stmt|;
 block|}
+else|else
+block|{
+name|fail
+argument_list|(
+name|msg
+operator|+
+literal|" ... where did this come from: "
+operator|+
+name|expected
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * test the test    */
-DECL|method|sanityCheckAssertDoubles
+DECL|method|sanityCheckAssertNumerics
 specifier|private
 name|void
-name|sanityCheckAssertDoubles
+name|sanityCheckAssertNumerics
 parameter_list|()
 block|{
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"Null?"
 argument_list|,
@@ -3874,7 +3981,7 @@ argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"big"
 argument_list|,
@@ -3891,7 +3998,7 @@ literal|2.300539003816927E9
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"small"
 argument_list|,
@@ -3912,15 +4019,111 @@ literal|9
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertNumerics
+argument_list|(
+literal|"small"
+argument_list|,
+operator|new
+name|Double
+argument_list|(
+literal|2.3005390038169265E
+operator|-
+literal|9
+argument_list|)
+argument_list|,
+operator|new
+name|Double
+argument_list|(
+literal|2.300539003816927E
+operator|-
+literal|9
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNumerics
+argument_list|(
+literal|"high long"
+argument_list|,
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
+name|assertNumerics
+argument_list|(
+literal|"high int"
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
+name|assertNumerics
+argument_list|(
+literal|"low long"
+argument_list|,
+name|Long
+operator|.
+name|MIN_VALUE
+argument_list|,
+name|Long
+operator|.
+name|MIN_VALUE
+argument_list|)
+expr_stmt|;
+name|assertNumerics
+argument_list|(
+literal|"low int"
+argument_list|,
+name|Integer
+operator|.
+name|MIN_VALUE
+argument_list|,
+name|Integer
+operator|.
+name|MIN_VALUE
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Object
+name|num
+range|:
+operator|new
+name|Object
+index|[]
+block|{
+operator|new
+name|Date
+argument_list|(
+literal|42
+argument_list|)
+block|,
+literal|42
+block|,
+literal|42L
+block|,
+literal|42.0F
+block|}
+control|)
+block|{
 try|try
 block|{
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"non-null"
 argument_list|,
 literal|null
 argument_list|,
-literal|42
+name|num
 argument_list|)
 expr_stmt|;
 name|fail
@@ -3937,11 +4140,11 @@ parameter_list|)
 block|{}
 try|try
 block|{
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"non-null"
 argument_list|,
-literal|42
+name|num
 argument_list|,
 literal|null
 argument_list|)
@@ -3958,9 +4161,33 @@ name|AssertionError
 name|e
 parameter_list|)
 block|{}
+block|}
 try|try
 block|{
-name|assertDoubles
+name|assertNumerics
+argument_list|(
+literal|"non-number"
+argument_list|,
+literal|"foo"
+argument_list|,
+literal|42
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"expected was non-number"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AssertionError
+name|e
+parameter_list|)
+block|{}
+try|try
+block|{
+name|assertNumerics
 argument_list|(
 literal|"non-number"
 argument_list|,
@@ -3983,7 +4210,7 @@ parameter_list|)
 block|{}
 try|try
 block|{
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"diff"
 argument_list|,
@@ -4014,7 +4241,7 @@ parameter_list|)
 block|{}
 try|try
 block|{
-name|assertDoubles
+name|assertNumerics
 argument_list|(
 literal|"diff"
 argument_list|,
@@ -4038,6 +4265,95 @@ expr_stmt|;
 name|fail
 argument_list|(
 literal|"small& diff"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AssertionError
+name|e
+parameter_list|)
+block|{}
+try|try
+block|{
+name|assertNumerics
+argument_list|(
+literal|"diff long"
+argument_list|,
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|Long
+operator|.
+name|MAX_VALUE
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"diff long"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AssertionError
+name|e
+parameter_list|)
+block|{}
+try|try
+block|{
+name|assertNumerics
+argument_list|(
+literal|"diff int"
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"diff int"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AssertionError
+name|e
+parameter_list|)
+block|{}
+try|try
+block|{
+name|assertNumerics
+argument_list|(
+literal|"diff date"
+argument_list|,
+operator|new
+name|Date
+argument_list|(
+literal|42
+argument_list|)
+argument_list|,
+operator|new
+name|Date
+argument_list|(
+literal|43
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"diff date"
 argument_list|)
 expr_stmt|;
 block|}
